2003-02-01  Richard Sandiford  <rsandifo@redhat.com>

	* flags.h (flag_volatile): Remove declaration.
	(flag_volatile_global, flag_volatile_static): Likewise.
	* c-typeck.c (build_indirect_ref): Don't check flag_volatile.
	* toplev.c (flag_volatile): Remove definition.
	(flag_volatile_global, flag_volatile_static): Likewise.
	(f_options): Remove corresponding entries here.
	* varasm.c (make_decl_rtl): Don't check flag_volatile_global
	or flag_volatile_static.
	* doc/invoke.texi: Remove documentation of -fvolatile,
	-fvolatile-global and -fvolatile-static.

2003-01-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (pa_output_function_prologue, pa_output_function_epilogue): Move
	updating of total_code_bytes from prologue to epilogue.

2003-01-31  Ulrich Weigand  <uweigand@de.ibm.com>

	* reload.c (find_reloads): Do not use the mode specified in the insn
	pattern as reload mode for address operands.  Do not generate optional
	reloads for operands where a mandatory reload was already pushed.
	Generate optional reloads only in the final pass though find_reloads.
	(have_replacement_p): New function.

2003-01-31  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Testing): Remove a reference to our obsolete
	/testresults web pages and strip redundant information concerning
	test results.
	(Binaries): Refer to Microsoft Windows instead of listing all
	possible variants.

Sat Feb  1 00:28:30 CET 2003  Jan Hubicka  <jh@suse.cz>

	* loop.c (emit_prefetch_instructions):  Do conversion at right place in
	RTL chain.

	* combine.c (simplify_set): Reverse order of ragumetns to
	REG_CANNOT_CHANGE_MODE_P
	* df.c (df_def_record_1): Likewise.
	* recog.c (register_operand): Likewise.
	* simplify-rtx.c (simplify_subreg): Likewise.
	* hard-reg-set.h (REG_CANNOT_CHANGE_MODE_P): Update use of
	CANNOT_CHANGE_MODE_CLASS.
	* regclass.c (cannot_change_mode_set_regs, invalid_mode_change_p):
	Likewise.
	* reload.c (push_reload): Likewise.